src/styles/template-parts/photo-vertical.scss
@use "../variables.scss" as *;

/*
360  182x252 (240x290)
768  182x252 (240x290)
1440 228x316 (300x364)
1920 320x442 (419x509)

angle - -14.2
top - 3%
left - 0.25%
*/

$vert-img-w-360: 182px;
$vert-img-h-360: 252px;

$vert-img-w-768: 182px;
$vert-img-h-768: 252px;

$vert-img-w-1440: 228px;
$vert-img-h-1440: 316px;

$vert-img-w-1920: 320px;
$vert-img-h-1920: 442px;

$vert-angle-frame: -5.89deg;
$vert-angle-frame-before: -0.4deg;
$vert-angle-frame-after: -8.31deg;

/* размер фото для макс устройства*/
$vert-img-width-template: 320px;
$vert-img-height-template: 442px;

/* размер контейнера с фото и рамками */
$vert-img-frame-width-template: 419px;
$vert-img-frame-height-template: 509px;

$k-vert-frame-width: calc(
  $vert-img-width-template / $vert-img-frame-width-template
);
$k-vert-frame-height: calc(
  $vert-img-width-template / $vert-img-frame-height-template
);

/* при 419px ширине нужно контейнера фото нужно получить 18px 18/419 */
$k-18-419: calc(18px / $vert-img-frame-width-template);

/* при 419px ширине нужно контейнера фото нужно получить 4px 4/419 */
$k-4-419: calc(4px / $vert-img-frame-width-template);

@mixin set-img-size($width, $height) {
  .vert-img-wrap {
    width: $width;
    height: $height;
  }
  .vert-img-frame {
    width: calc($width / $k-vert-frame-width);
    height: calc($width / $k-vert-frame-height);
  }
}

.vert-img-frame {
  display: flex;
  position: relative;
  justify-content: center;
  overflow: hidden;
}

.vert-img-wrap {
  position: relative;
  border-radius: 4px;

  transform: rotate($vert-angle-frame);
  top: 3%;
  left: 0.25%;
}

@include set-img-size($vert-img-w-360, $vert-img-h-360);

.vert-img-wrap::before,
.vert-img-wrap::after {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  border-radius: 4px;
  z-index: -1;
  border-width: 2px;
  border-style: solid;
}

.vert-img-wrap::before {
  border-color: $blue;

  transform: rotate($vert-angle-frame-before);
  top: calc(100% * $k-18-419);
  left: calc(-100% * $k-18-419);
}
.vert-img-wrap::after {
  border-color: $red;

  transform: rotate($vert-angle-frame-after);
  top: calc(100% * $k-18-419); /* 18px */
  left: calc(-100% * $k-4-419); /* -4px */
}

.vert-img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  line-height: 0;
  border-radius: 4px;
  transition: transform $animations;
}

.vert-img:hover {
  transform: $animation-rotate;
}

/*
@media screen and (min-width: 768px) {
}*/

@media screen and (min-width: 768px) {
  @include set-img-size($vert-img-w-768, $vert-img-h-768);
}

/*@media screen and (min-width: 1200px) {
}*/

@media screen and (min-width: 1440px) {
  @include set-img-size($vert-img-w-1440, $vert-img-h-1440);
}

@media screen and (min-width: 1920px) {
  @include set-img-size($vert-img-w-1920, $vert-img-h-1920);
}
/*
@media screen and (min-width: 768px){
  
}
*/

